# sanctum-of-darkness

./: Cargo.toml  LICENSE  README.md
assets/: tilemap.ldtk
assets/npcs/: gardener.npc.json5  rascal.npc.json5  savior.npc.json5  savior_dog.npc.json5
src/: assets.rs  components.rs  json5_asset.rs  main.rs  plugins.rs  resources.rs  state.rs  systems.rs
src/components/: spawner.rs
src/plugins/: level.rs  loader.rs
src/plugins/level/: direction.rs  grid.rs  ldtk_entities.rs  level_state.rs  player.rs  plugin.rs  switch_level.rs
src/plugins/loader/: asset_state.rs  loaded_assets.rs  plugin.rs  registry.rs
src/resources/: grid.rs  loaded_assets.rs  player_entrypoint.rs  registry.rs  tileset.rs
src/systems/: move_player.rs  setup_grid.rs  setup_registry.rs  spawn_player.rs
