[package]
name = "sanctum-of-darkness"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dev"] }
bevy_asset_loader = { version = "0.26.0", features = ["2d"] }
bevy_ecs_ldtk = { version = "0.14.0", features = ["atlas"] }
bevy_modern_pixel_camera = "0.5.1"
json5 = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
type_complexity = "allow"
too_many_arguments = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"
wildcard_imports = "allow"
float_cmp = "allow"
too_many_lines = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
